--- a/docker-compose-dl.yaml
+++ b/docker-compose-dl.yaml
@@ -8,7 +8,7 @@ services:
       - PUID=1000
       - PGID=100
       - TZ=America/New_York
-      - WHITELIST=""
+      - WHITELIST=
     volumes:
       - /share/homes/chief/Config/Transmission:/config
       - /share/Incoming:/downloads
