--- a/docker-compose-dl.yaml
+++ b/docker-compose-dl.yaml
@@ -18,8 +18,8 @@ services:
       - 9091:9091
       - 51413:51413
       - 51413:51413/udp
-    restart: unless-stopped
-  
+    restart: always
+    
   sabnzbd:
     image: lscr.io/linuxserver/sabnzbd
     container_name: sabnzbd
@@ -34,8 +34,8 @@ services:
       - /share/Shows:/tv
     ports:
       - 9090:8080
-    restart: unless-stopped
-
+    restart: always
+    
 networks:
   default:
     external:
