--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -13,6 +13,7 @@ services:
       DEVICE_NAME: Cygnus
     network_mode: "host"
     restart: always
+  
   mopidy:
     image: chiefy/mopidy
     container_name: mopidy
@@ -27,6 +28,7 @@ services:
       - "/share/homes/chief/Config/Mopidy/share:/usr/share/mopidy/local"
       - "/share/CACHEDEV1_DATA/Music:/share/CACHEDEV1_DATA/Music"
       - "snapfifo:/var/local/snap"
+
   podgrab:
     image: akhilrex/podgrab
     container_name: podgrab
@@ -39,5 +41,20 @@ services:
       - 8181:8080
     restart: always
 
+  navidrome:
+    image: deluan/navidrome:latest
+    user: "1000:100"
+    ports:
+      - "4533:4533"
+    restart: always
+    environment:
+      # Optional: put your config options customization here. Examples:
+      ND_SCANSCHEDULE: 1h
+      ND_LOGLEVEL: info  
+      ND_SESSIONTIMEOUT: 72h
+      ND_BASEURL: "/nd"
+    volumes:
+      - "/share/homes/chief/Config/Navidrome:/data"
+      - "/share/CACHEDEV1_DATA/Music:/music:ro"
 volumes:
   snapfifo:
