--- a/docker-compose-dashboard.yaml
+++ b/docker-compose-dashboard.yaml
@@ -1,14 +1,10 @@
-version: "2.1"
+version: "3.3"
 services:
-  heimdall:
-    image: lscr.io/linuxserver/heimdall
-    container_name: heimdall
-    environment:
-      - PUID=1000
-      - PGID=100
-      - TZ=America/New_York
-    volumes:
-      - /share/homes/chief/Config/Heimdall:/config
+  homepage:
+    image: ghcr.io/benphelps/homepage:latest
+    container_name: homepage
     ports:
-      - 5000:80
-    restart: always
+      - 5000:3000
+    volumes:
+      - /home/chief/.config/homepage:/app/config 
+      - /var/run/docker.sock:/var/run/docker.sock # (optional) For docker integrations
