--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -43,16 +43,19 @@ services:
 
   navidrome:
     image: deluan/navidrome:latest
+    container_name: navidrome
     user: "1000:100"
     ports:
       - "4533:4533"
     restart: always
     environment:
-      # Optional: put your config options customization here. Examples:
       ND_SCANSCHEDULE: 1h
       ND_LOGLEVEL: info  
-      ND_SESSIONTIMEOUT: 72h
+      ND_SESSIONTIMEOUT: 24h
       ND_BASEURL: "/nd"
+      ND_TRANSCODINGCACHESIZE: "5000MB"
+      ND_IMAGECACHESIZE: "1000MB"
+      ND_ENABLEGRAVATAR: "true"
     volumes:
       - "/share/homes/chief/Config/Navidrome:/data"
       - "/share/CACHEDEV1_DATA/Music:/music:ro"
