--- a/docker-compose-dl.yaml
+++ b/docker-compose-dl.yaml
@@ -35,7 +35,21 @@ services:
     ports:
       - 9090:8080
     restart: always
-    
+
+  tubesync:
+    image: ghcr.io/meeb/tubesync:latest
+    container_name: tubesync
+    restart: always
+    ports:
+      - 4848:4848
+    volumes:
+      - /share/homes/chief/Config/Tubesync:/config
+      - /share/Incoming/Tubesync:/downloads
+    environment:
+      - TZ=America/New_York
+      - PUID=1000
+      - PGID=100
+      
 networks:
   default:
     external:
