--- a/docker-compose-benotes.yaml
+++ b/docker-compose-benotes.yaml
@@ -10,6 +10,7 @@ services:
     ports:
       - ${APP_PORT}:80
     volumes:
+      - /share/homes/chief/Config/Benotes/.env:/var/www/.env
       - /share/homes/chief/Config/Benotes/thumbnails:/var/www/storage/app/public/thumbnails
       - /share/homes/chief/Config/Benotes/backup:/var/www/storage/backup
       - /share/homes/chief/Config/Benotes/:/var/www/storage/logs
