--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -27,7 +27,7 @@ services:
       - "/share/homes/chief/Config/Mopidy/mopidy.conf:/config/mopidy.conf"
       - "/share/homes/chief/Config/Mopidy/share:/usr/share/mopidy/local"
       - "/share/homes/chief/Config/Mopidy/playlists:/usr/share/mopidy/m3u"
-      - "/share/external/DEV3301_1/Music:/share/external/DEV3301_1/Music"
+      - "/share/Music:/share/Music"
       - "snapfifo:/var/local/snap"
 
   podgrab:
