--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -17,8 +17,8 @@ services:
   mopidy:
     image: ghcr.io/chiefy/snapcast-mopidy/mopidy:latest
     container_name: mopidy
-    devices:
-      - "/dev/snd"
+   # devices:
+   #   - "/dev/snd"
     ports:
       - "6600:6600"
       - "6680:6680"
