--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -25,7 +25,7 @@ services:
     restart: always
     volumes:
       - "/mnt/Config/mopidy/conf/mopidy.conf:/config/mopidy.conf"
-      - "/mnt/Config/mopidy/local:/usr/share/mopidy/local"
+      - "/tmp/mopidy:/usr/share/mopidy/local"
       - "/mnt/Config/mopidy/m3u:/usr/share/mopidy/m3u"
       - "/mnt/Music:/mnt/Music"
       - "snapfifo:/var/local/snap"
