--- a/docker-compose-dashboard.yaml
+++ b/docker-compose-dashboard.yaml
@@ -1,26 +1,11 @@
 version: "3.3"
 
 services:
-  npm:
-    image: jc21/nginx-proxy-manager:latest
-    container_name: npm
-    restart: unless-stopped
-    ports:
-      - '80:80' # Public HTTP Port
-      - '443:443' # Public HTTPS Port
-      - '81:81' # Admin Web Port
-    environment:
-      DB_SQLITE_FILE: "/data/database.sqlite"
-      DISABLE_IPV6: 'true'
-    volumes:
-      - ./data:/data
-      - ./letsencrypt:/etc/letsencrypt
-
   homepage:
     image: ghcr.io/benphelps/homepage:latest
     container_name: homepage
-    expose:
-      - 3000
+    ports:
+      - "3000:3000"
     volumes:
-      - /mnt/Config/Homepage:/app/config 
+      - /mnt/Config/homepage:/app/config 
     restart: always
