--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -31,11 +31,10 @@ services:
     container_name: mympd
     user: 1000:1000
     ports:
-      - "9999:9999"
+      - "9999:80"
     environment:
       - UMASK_SET=022
       - MYMPD_SSL=false
-      - MYMPD_HTTP_PORT=9999
       - MPD_HOST=mpd
       - MPD_PORT=6600
     volumes:
@@ -47,6 +46,7 @@ services:
 
   audiobookshelf:
     image: ghcr.io/advplyr/audiobookshelf:latest
+    container_name: audiobookshelf
     ports:
       - 13378:80
     volumes:
