--- a/docker-compose-gluetun.yaml
+++ b/docker-compose-gluetun.yaml
@@ -25,5 +25,5 @@ services:
       - OPENVPN_PASSWORD=${NORDVPN_PASSWORD}
       # Timezone for accurate log times
       - TZ=America/New_York
-      - SERVER_COUNTRIES="United States"
-      - SERVER_REGIONS="New York"
+      - SERVER_COUNTRIES=United\ States
+      - SERVER_REGIONS=America
