update to latest snapserver docker image

--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -5,7 +5,7 @@ services:
     container_name: snapserver
     depends_on:
       - mpd
-    image: chiefy/librespot-snapserver:0.27.0
+    image: ghcr.io/chiefy/dockerfiles/snapcast-librespot:latest
     volumes:
       - "/mnt/Config/snapserver/snapserver.conf:/etc/snapserver.conf"
       - "snapfifo:/tmp/snapfifo:ro"
