add streamer container

--- a/docker-compose-owncast.yaml
+++ b/docker-compose-owncast.yaml
@@ -1,5 +1,16 @@
 version: "3"
 services:
+  streamer:
+    image: ghcr.io/chiefy/docker-ffmpeg-mp4-folder:latest
+    container_name: streamer
+    restart: unless-stopped
+    environment:
+      - VIDEO_DIR=/mnt/Movies
+      - OWNCAST_STREAM_KEY=${OWNCAST_STREAM_KEY}
+      - OWNCAST_STREAM_URL=${OWNCAST_STREAM_URL}
+    volumes:
+      - "/mnt/Movies:/mnt/Movies"
+
   owncast:
     image: owncast/owncast:latest
     container_name: owncast
