--- a/docker-compose-cobalt.yaml
+++ b/docker-compose-cobalt.yaml
@@ -16,7 +16,7 @@ services:
 
     environment:
       # replace https://api.cobalt.tools/ with your instance's target url in same format
-      API_URL: "https://api.cobalt.skibidi.cc/"
+      API_URL: "https://cobalt-api.skibidi.cc/"
       # replace eu-nl with your instance's distinctive name
       API_NAME: "en-us"
       # if you want to use cookies when fetching data from services, uncomment the next line and the lines under volume
@@ -56,6 +56,7 @@ services:
   # update the cobalt image automatically with watchtower
   watchtower:
     image: ghcr.io/containrrr/watchtower
+    container_name: cobalt-watchtower
     restart: unless-stopped
     command: --cleanup --scope cobalt --interval 900 --include-restarting
     volumes:
