--- a/docker-compose-immich.yaml
+++ b/docker-compose-immich.yaml
@@ -10,6 +10,8 @@ services:
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
+    env_file:
+      - stack.env
     ports:
       - 2283:3001
     depends_on:
@@ -27,6 +29,8 @@ services:
     #   service: cpu # set to one of [armnn, cuda, openvino, openvino-wsl] for accelerated inference - use the `-wsl` version for WSL2 where applicable
     volumes:
       - model-cache:/cache
+    env_file:
+      - stack.env
     restart: always
 
   redis:
