--- a/docker-compose-yt-archivist.yaml
+++ b/docker-compose-yt-archivist.yaml
@@ -15,7 +15,7 @@ services:
       - REDIS_HOST=archivist-redis # don't add protocol
       - HOST_UID=1000
       - HOST_GID=1000
-      - TA_HOST=ta.skibidi.cc
+      - TA_HOST=yta.skibidi.cc
       - TA_USERNAME=tubearchivist
       - TA_PASSWORD=verysecret
       - ELASTIC_PASSWORD=verysecret
