--- a/docker-compose-jdownloader.yaml
+++ b/docker-compose-jdownloader.yaml
@@ -1,8 +1,7 @@
 services:
   jdownloader-2:
     image: jlesage/jdownloader-2
-    ports:
-      - "5800:5800"
+    restart: always
     environment:
       - MYJDOWNLOADER_EMAIL=${MYJDOWNLOADER_EMAIL}
       - MYJDOWNLOADER_PASSWORD=${MYJDOWNLOADER_PASSWORD}
