--- a/docker-compose-seafile.yaml
+++ b/docker-compose-seafile.yaml
@@ -1,6 +1,7 @@
 services:
   db:
     image: mariadb:10.11
+    restart: always
     container_name: seafile-mysql
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
@@ -14,6 +15,7 @@ services:
   memcached:
     image: memcached:1.6.18
     container_name: seafile-memcached
+    restart: always
     entrypoint: memcached -m 256
     networks:
       - seafile-net
@@ -21,6 +23,7 @@ services:
   seafile:
     image: seafileltd/seafile-mc:11.0-latest
     container_name: seafile
+    restart: always
     ports:
       - "9080:80"
     volumes:
