--- a/docker-compose-jellyfin.yaml
+++ b/docker-compose-jellyfin.yaml
@@ -5,7 +5,7 @@ services:
     user: 0:100
     network_mode: host
     volumes:
-      - /mnt/Config/jellyfin:/config
+      - /opt/jellyfin/config:/config
       - /opt/jellyfin/cache:/cache
       - type: bind
         source: /mnt/Movies
