--- a/docker-compose-cobalt.yaml
+++ b/docker-compose-cobalt.yaml
@@ -1,63 +1,29 @@
 services:
-  cobalt-api:
-    image: ghcr.io/imputnet/cobalt:7
-    restart: unless-stopped
-    container_name: cobalt-api
+    cobalt-api:
+        image: ghcr.io/imputnet/cobalt:10
 
-    init: true
+        init: true
+        read_only: true
+        restart: unless-stopped
+        container_name: cobalt-api
 
-    # if container doesn't run detached on your machine, uncomment the next line
-    #tty: true
+        ports:
+            - 9000:9000/tcp
+        environment:
+            # replace https://api.url.example/ with your instance's url
+            # or else tunneling functionality won't work properly
+            API_URL: "https://cobalt.skibidi.cc/"
+        labels:
+            - com.centurylinklabs.watchtower.scope=cobalt
 
-    ports:
-      - 9000:9000/tcp
-      # if you're using a reverse proxy, uncomment the next line and remove the one above (9000:9000/tcp):
-      #- 127.0.0.1:9000:9000
+        # uncomment only if you use the COOKIE_PATH variable
+        # volumes:
+            # - ./cookies.json:/cookies.json
 
-    environment:
-      # replace https://api.cobalt.tools/ with your instance's target url in same format
-      API_URL: "https://cobalt-api.skibidi.cc/"
-      # replace eu-nl with your instance's distinctive name
-      API_NAME: "en-us"
-      # if you want to use cookies when fetching data from services, uncomment the next line and the lines under volume
-      # COOKIE_PATH: "/cookies.json"
-      # see docs/run-an-instance.md for more information
-    labels:
-      - com.centurylinklabs.watchtower.scope=cobalt
-
-    # if you want to use cookies when fetching data from services, uncomment volumes and next line
-    #volumes:
-    #- ./cookies.json:/cookies.json
-
-  cobalt-web:
-    image: ghcr.io/imputnet/cobalt:7
-    restart: unless-stopped
-    container_name: cobalt-web
-
-    init: true
-
-    # if container doesn't run detached on your machine, uncomment the next line
-    #tty: true
-
-    ports:
-      - 8991:9001/tcp
-      # if you're using a reverse proxy, uncomment the next line and remove the one above (9001:9001/tcp):
-      #- 127.0.0.1:9001:9001
-
-    environment:
-      # replace https://cobalt.tools/ with your instance's target url in same format
-      WEB_URL: "https://cobalt.skibidi.cc/"
-      # replace https://api.cobalt.tools/ with preferred api instance url
-      API_URL: "https://cobalt-api.skibidi.cc/"
-
-    labels:
-      - com.centurylinklabs.watchtower.scope=cobalt
-
-  # update the cobalt image automatically with watchtower
-  watchtower:
-    image: ghcr.io/containrrr/watchtower
-    container_name: cobalt-watchtower
-    restart: unless-stopped
-    command: --cleanup --scope cobalt --interval 900 --include-restarting
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+    # watchtower updates the cobalt image automatically
+    watchtower:
+        image: ghcr.io/containrrr/watchtower
+        restart: unless-stopped
+        command: --cleanup --scope cobalt --interval 900 --include-restarting
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
