--- a/docker-compose-cobalt.yaml
+++ b/docker-compose-cobalt.yaml
@@ -1,29 +1,34 @@
 services:
-    cobalt-api:
-        image: ghcr.io/imputnet/cobalt:10
+  cobalt-api:
+    image: ghcr.io/imputnet/cobalt:10
+    init: true
+    read_only: true
+    restart: unless-stopped
+    container_name: cobalt-api
+    ports:
+      - 9000:9000/tcp
+    environment:
+      API_URL: "https://cobalt-api.skibidi.cc/"
+    labels:
+      - com.centurylinklabs.watchtower.scope=cobalt
 
-        init: true
-        read_only: true
-        restart: unless-stopped
-        container_name: cobalt-api
-
-        ports:
-            - 9000:9000/tcp
-        environment:
-            # replace https://api.url.example/ with your instance's url
-            # or else tunneling functionality won't work properly
-            API_URL: "https://cobalt-api.skibidi.cc/"
-        labels:
-            - com.centurylinklabs.watchtower.scope=cobalt
-
-        # uncomment only if you use the COOKIE_PATH variable
-        # volumes:
-            # - ./cookies.json:/cookies.json
+  cobalt-web:
+    image: ghcr.io/imputnet/cobalt:10
+    restart: unless-stopped
+    container_name: cobalt-web
+    init: true
+    ports:
+      - 8991:9001/tcp
+    environment:
+      WEB_URL: "https://cobalt.skibidi.cc/"
+      API_URL: "https://cobalt-api.skibidi.cc/"
+    labels:
+      - com.centurylinklabs.watchtower.scope=cobalt
 
     # watchtower updates the cobalt image automatically
     watchtower:
-        image: ghcr.io/containrrr/watchtower
-        restart: unless-stopped
-        command: --cleanup --scope cobalt --interval 900 --include-restarting
-        volumes:
-            - /var/run/docker.sock:/var/run/docker.sock
+      image: ghcr.io/containrrr/watchtower
+      restart: unless-stopped
+      command: --cleanup --scope cobalt --interval 900 --include-restarting
+      volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
