--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -54,6 +54,9 @@ services:
       - "4533:4533"
     restart: always
     environment:
+      ND_BACKUP_PATH: "/data/backups"
+      ND_BACKUP_SCHEDULE: "0 0 * * *"
+      ND_BACKUP_COUNT: 5
       ND_SCANSCHEDULE: 1h
       ND_LOGLEVEL: info
       ND_SESSIONTIMEOUT: 24h
