--- a/docker-compose-music.yaml
+++ b/docker-compose-music.yaml
@@ -67,6 +67,7 @@ services:
       ND_ENABLETRANSCODINGCONFIG: "false"
       ND_COVERARTPRIORITY: "embedded, front.*, cover.*, folder.*, external"
     volumes:
+      - /mnt/Config/navidrome/backups:/data/backups
       - /usr/share/navidrome:/data
       - /mnt/Music:/music:ro
 
